# configurator

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
data/: semiconductor_config.json
include/: configurator.h
src/: driver.cpp
